--- a/big/index.html
+++ b/big/index.html
@@ -16,7 +16,7 @@
 <body class='light'>
 <div>Science</div>
 <div>A metal container is a nonliving thing that is made by humans.</div>
-<div>The spines help the cactus plant to survive by procecting in from animals.</div>
+<div>The spines help the cactus plant to survive by protecting it from animals.</div>
 <div>In order to grow and thrive, all animals need water, air, and food.</div>
 <div>Frogs and butterflies each have their own stages of development.</div>
 <div>Eye is needed to sense color.</div>
